[package]
name = "roman_numerals"
version = "1.0.0"
edition = "2021"
rust-version = "1.60.0"
description = """
A library to convert integers to their roman numeral representation as strings. Values from 1 to
3999 are possible, otherwise it returns an OutOfRangeError. Zero has no representation in roman numerals.
"""
authors = ["Pierre Thibault <pierre.thibault@pierrethibault.dev"]
license = "MIT"
keywords = ["roman", "numerals", "roman-numerals"]
categories = ["text-processing"]
readme = "README.mk"

[dependencies]
range_check = "0.2.0"

[dev-dependencies]
regex = "1.11.0"

[lib]
name = "roman_numerals"           
path = "src/roman_numerals.rs"    
test = true           
doctest = true        
bench = true          
doc = true            
proc-macro = false    
crate-type = ["lib"]  
required-features = []
